corrections
RUDP_Sender.c:82:15: error: ‘decision’ undeclared (first use in this function)
   82 |         fgets(decision, sizeof(decision), stdin);
      |               ^~~~~~~~

